--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<link rel="stylesheet" type="text/css" href="assets\css\style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="row">
                     <a href="#" class="right"> Student Login</a>
-                    <img src="assets\img\chimpessentials-large.svg" alt="chimp-logo" class="chimp-logo">  
+                    <img src="chimpessentials-large.svg" alt="chimp-logo" class="chimp-logo">  
             </div>     
         </div>  
     </section> 
@@ -192,7 +192,7 @@
                 </div>
                 <div class="col-6">   
                     <div class="row monkey-logo-row">
-                    <img src="assets\img\mc-partner.svg" alt="monkey-logo" class="monkey-logo">
+                    <img src="mc-partner.svg" alt="monkey-logo" class="monkey-logo">
               </div> 
             </div>
         </div>
