--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <section class="wrap-header">
         <div class="container">
             <div class="row">
-                <img src="assets\img\logos.svg"  alt="company-review" height="40" width="900.69px" > 
+                <img src="logos.svg"  alt="company-review" height="40" width="900.69px" > 
             </div>
         </div>
     </section>
